@@ -111,7 +111,7 @@ function [x, fval, info, output, grad, hess] = fminunc (fcn, x0, options = struc
   endif
 
   if (ischar (fcn))
-    fcn = str2func (fcn, "global");
+    fcn = str2func (fcn);
   endif
 
   xsz = size (x0);
